<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".choose.ChooseFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_name_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:shadowColor="@color/white"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:text="@string/choose_option"
        android:textColor="@color/colorBlueGrey"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:scaleType="centerCrop"
            android:src="@drawable/restaurant_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_city" />

        <Button
            android:id="@+id/btn_restaurant"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/bg_button"
            android:text="@string/restaurant"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <Button
            android:id="@+id/btn_hotel"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/bg_button"
            android:text="@string/hotel"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="32dp"
            android:scaleType="centerCrop"
            android:src="@drawable/hotel_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_city" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/museum_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_hotel" />

        <Button
            android:id="@+id/btn_fashion"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/bg_button"
            android:text="@string/fashion"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <Button
            android:id="@+id/btn_museum"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/bg_button"
            android:text="@string/museum"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:src="@drawable/fashion_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_restaurant" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:scaleType="centerCrop"
            android:src="@drawable/nature_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_fashion" />

        <Button
            android:id="@+id/btn_nature"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="45dp"
            android:background="@drawable/bg_button"
            android:text="@string/nature"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" />

        <Button
            android:id="@+id/btn_market"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="45dp"
            android:background="@drawable/bg_button"
            android:text="@string/market"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageView5"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/market_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_museum" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>